--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Image Search</title>
-</head>
-<body>
-    <div id="root"></div>
-    <script src="assets/bundle.js"></script>
-    <link rel="stylesheet" href="assets/bundle.css">
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="%REACT_APP_DESC%" />
+        <title>%REACT_APP_TITLE%</title>
+        <base href="/" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link
+            rel="apple-touch-icon"
+            href="%PUBLIC_URL%/logo192.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="%PUBLIC_URL%/logo512.png"
+        />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
